--- a/DoAnCNTT/DoAnCNTT.csproj
+++ b/DoAnCNTT/DoAnCNTT.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Const.cs" />
     <Compile Include="FDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,11 +90,13 @@
       <DependentUpon>FXoa.cs</DependentUpon>
     </Compile>
     <Compile Include="KySu.cs" />
+    <Compile Include="Listuser.cs" />
     <Compile Include="NhanSu.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLy.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="FDangNhap.resx">
       <DependentUpon>FDangNhap.cs</DependentUpon>
     </EmbeddedResource>
