--- a/DoAnCNTT/DoAnCNTT.csproj
+++ b/DoAnCNTT/DoAnCNTT.csproj
@@ -60,6 +60,12 @@
     <Compile Include="FMain.Designer.cs">
       <DependentUpon>FMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FPhong.Designer.cs">
+      <DependentUpon>FPhong.cs</DependentUpon>
+    </Compile>
     <Compile Include="FQLKySu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FMain.resx">
       <DependentUpon>FMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FPhong.resx">
+      <DependentUpon>FPhong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FQLKySu.resx">
       <DependentUpon>FQLKySu.cs</DependentUpon>
